--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack",
+        "dev": "next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -20,10 +20,12 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@eslint/eslintrc": "^3",
         "@next/bundle-analyzer": "^13.0.0",
         "eslint": "^8.0.0",
         "eslint-config-next": "13.0.0",
         "postcss": "^8",
-        "tailwindcss": "^3.4.1"
+        "tailwindcss": "^3.4.1",
+        "next-sitemap": "^4.2.3"
     }
 }
