--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
         "@next/bundle-analyzer": "^13.0.0",
         "eslint": "^8.0.0",
         "eslint-config-next": "13.0.0",
+        "next-sitemap": "^4.2.3",
         "postcss": "^8",
-        "tailwindcss": "^3.4.1",
-        "next-sitemap": "^4.2.3"
+        "tailwindcss": "^3.4.1"
     }
 }
