--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "framer-motion": "^10.16.4",
-        "next": "^15.1.3",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "next": "14.0.4",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-error-boundary": "^4.0.12"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
