--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@next/bundle-analyzer": "^13.0.0",
+        "autoprefixer": "^10.4.20",
+        "css-loader": "^7.1.2",
         "eslint": "^8.0.0",
         "eslint-config-next": "13.0.0",
         "next-sitemap": "^4.2.3",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1"
+        "postcss": "^8.4.49",
+        "postcss-loader": "^8.1.1",
+        "style-loader": "^4.0.0",
+        "tailwindcss": "^3.4.17"
     }
 }
