--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "@chakra-ui/next-js": "^2.1.5",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "framer-motion": "^10.16.4",
+        "framer-motion": "^10.18.0",
+        "lucide-react": "^0.563.0",
         "next": "14.0.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
