--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "framer-motion": "^10.18.0",
+        "leaflet": "^1.9.4",
         "lucide-react": "^0.563.0",
         "next": "14.0.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-error-boundary": "^4.0.12"
+        "react-error-boundary": "^4.0.12",
+        "react-leaflet": "^4.2.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
