--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-error-boundary": "^4.0.12",
-        "react-leaflet": "^4.2.1"
+        "react-leaflet": "^4.2.1",
+        "react-pdf": "^10.3.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
