--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-error-boundary": "^4.0.12",
-        "react-leaflet": "^4.2.1",
-        "react-pdf": "^10.3.0"
+        "react-leaflet": "^4.2.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
