--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "leaflet": "^1.9.4",
         "lucide-react": "^0.563.0",
         "next": "14.0.4",
+        "nodemailer": "^8.0.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-error-boundary": "^4.0.12",
